@@ -1,35 +1,28 @@
 import com.example.Feline;
 import org.junit.Test;
-
-import java.util.Arrays;
+import  org.junit.Assert;
 import java.util.List;
-
-import static org.junit.Assert.assertEquals;
-
 public class FelineTest {
+    Feline feline = new Feline();
+
     @Test
-    public void testGetKittensWithParam() {
-        Feline feline = new Feline();
-        int result = feline.getKittens(3);
-        assertEquals(3, result);
-    }
-    @Test
-    public void testGetKittens() {
-        Feline feline = new Feline();
-        int result = feline.getKittens();
-        assertEquals(1, result);
-    }
-    @Test
-    public void testEatMeat() throws Exception {
-        Feline feline = new Feline();
-        List<String> foodList = feline.eatMeat();
-        assertEquals(Arrays.asList("Животные", "Птицы", "Рыба"), foodList);
+    public void eatMeat() throws Exception {
+        Assert.assertEquals(List.of("Животные", "Птицы", "Рыба"), feline.eatMeat());
     }
 
     @Test
-    public void testGetFamily() {
-        Feline feline = new Feline();
-        String result = feline.getFamily();
-        assertEquals("Кошачьи", result);
+    public void getFamily() {
+        Assert.assertEquals("Кошачьи", feline.getFamily());
     }
+
+    @Test
+    public void getOneKittens() {
+        Assert.assertEquals(1, feline.getKittens());
+    }
+
+    @Test
+    public void getKittensWithCount() {
+        Assert.assertEquals(3, feline.getKittens(3));
+    }
+
 }
